uncraft: migrated a few sites to more modern notation